SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

SQLParam Plugin: The parameter dialog has a new check box "Always quote values"
   that allows to permanently switch on the "Quote Values" check box.

"Color selected rows" dialog now remembers the last used color. See right mouse menu of SQL result tables.

Postgres Plugin: Updated Plugin libs
   from postgis-jdbc-1.3.3.jar, postgersql-8.3-603.jdbc3.jar to postgis-jdbc-2.3.0.jar, postgersql-42.2.9.jar

Driver dialog --> tab "Extra Class Path" --> button "Add": File chooser now remembers last directory.

File open dialog's preview area can be resized.

Graph Plugin: Query builder now supports schema/catalog qualified table names.
   Schema/catalog qualified can be switched on by clicking a Graph's "Kick off" button or by a Graph's right mose menu.

The former file import now allows to import from clipboard, too.

Connect button in Alias dialog.

Change tracking:
  Changes can be tracked by light yellow bars (gutters) at both sides of the editor.
  Change tracking has three modes: Manual, file based and GIT based (see https://git-scm.com).
  The modes can be switched using the switchable change track toolbar button (the one with the paw icon).
  For more information on change tracking please see toolbar buttons' tooltips.
  Note: When the change tracking toolbar button is switched to "Manually rebase" the reloaded contents are automatically made the initial change track base.

Hibernate Plugin: The Hibernate process details dialog now has an option "Restore default to run in console".
   This generates the SQuirreL's Hibernate server launch command such that the process runs in a console window.

Recent files dialog: New right mouse menu items in file list: "Copy path" and "Copy file name"
