@@ -23,6 +23,15 @@ jardirectory.image=jarDirectory.png
 
 sqlcopy.image=sqlcopy.png
 
+add.image=add.gif
+delete.image=delete.gif
+copy.image=copy.png
+
+next_nav.image=next_nav.gif
+prev_nav.image=prev_nav.gif
+
+replace.image=replace.png
+
 ########
 # Configuration information for Actions.
 ########
