@@ -4,11 +4,15 @@ HibernatePrefsTab.hint=Hibernate configurations
 
 HibernatePanel.config=Configuration
 HibernatePanel.newConfig=New
+HibernatePanel.newConfig.tooltip=Create a new Hibernate configuration
+
 HibernatePanel.FactoryProvider=SessionFactoryImpl provider
 
 HibernatePanel.classPathAdd=Add classpath entry
+HibernatePanel.classPathAdd.filechooser.title=Choose classpath entry
 HibernatePanel.classPathDirAdd=Add archive files directory
-HibernatePanel.classPathRemove=Remove selected entries
+HibernatePanel.classPathDirAdd.filechooser.title=Choose archive files directory
+HibernatePanel.classPathRemove.tooltip=Remove selected classpath entries
 
 HibernatePanel.ConfiguirationDef=Configuration definition
 
@@ -36,6 +40,17 @@ FactoryProviderDialog.cancel=Cancel
 HibernatePanel.removeFactoryProvider=Remove
 
 HibernatePanel.removeConfig=Remove
+HibernatePanel.removeConfig.tooltip=Remove the selected Hibernate configuration
+
+HibernatePanel.copyConfig.tooltip=Copy the selected Hibernate configuration
+
+CopyConfigDlg.copy.config.enter.new.config.name=Enter name of copied configuration
+CopyConfigDlg.copy.config.enter.new.config.name.title=Name of copied configuration
+
+CopyConfigDlg.ok=OK
+CopyConfigDlg.cancel=Cancel
+CopyConfigCtrl.copy.config.name.must.not.be.empty=Name must not be empty
+CopyConfigCtrl.copy.config.name.exists=The name already exists
 
 HibernatePanel.applyConfigChanges=Apply changes to this configuration
 
@@ -48,6 +63,8 @@ HibernateController.noProviderMsg=Missing SessionFactoryImplProvider .\nChanges 
 HibernateController.ReallyRemoveConfig=Are you sure you want to delete configuration "{0}".
 HibernateController.NoConfigToRemove=No configuration selected to remove.
 
+HibernateController.NoConfigToCopy=No configuration selected to copy.
+
 HibernatePanel.toObtainSessionFact=To obtain a Hibernate SessionFactoryImpl instance SQuirreL should:
 
 HibernatePanel.toObtainSessionFactConfiguration=Call "new org.hibernate.cfg.Configuration().configure().buildSessionFactory();"
@@ -59,7 +76,11 @@ HibernatePanel.toObtainSessionFactJPA=Call "javax.persistence.Persistence.create
 HibernatePanel.toObtainSessionFactPersUnit=Persistence unit name:
 
 HibernatePanel.moveUp=Move up
+HibernatePanel.moveUp.tooltip=Move selected classpath entries up
 HibernatePanel.moveDown=Move down
+HibernatePanel.moveDown.tooltip=Move selected classpath entries down
+
+HibernatePanel.classpath.replace.tooltip=Replace selected classpath entry
 
 HibernatePanel.howToAccess=Memory usage: To access Hibernate SQuirreL should:
 HibernateConfigPanel.createProcess=Launch a process that runs Hibernate (lower memory usage)
@@ -118,6 +139,4 @@ Example persistence.xml file:\n\
 </persistence>
 
 
-
-
-
+HibernatePanel.classPathReplace.no.selection=Please select the classpath entry to replace
